--- a/Confman Service/.project
+++ b/Confman Service/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Confman Service</name>
+	<name>net.ostis.confman.service</name>
 	<comment></comment>
 	<projects>
 	</projects>
