--- a/Confman UI/.project
+++ b/Confman UI/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Confman UI</name>
+	<name>net.ostis.confman.ui</name>
 	<comment></comment>
 	<projects>
 	</projects>
