Issue: "Dev Common: Commit third party libraries" url-> https://github.com/Ivan-Zhukau/conforg-desktop/issues/25
In commit:
1) Introduce "net.ostis.confman.test" project. This project will be used
for unit tests
2) Introduce "net.ostsi.confman.lib" project. This project will be used
for storing all dependent libraries.
3) Commit log4j-1.2.17 and poi_3.9 libraries with sources.
4) Introduce confman.userlibraries (user libraries for eclipse)

 Issue #25

--- a/net.ostis.confman.model/.classpath
+++ b/net.ostis.confman.model/.classpath
@@ -2,11 +2,8 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
-	<classpathentry kind="lib" path="D:/university/sem_5/SystemControlConfirentions/poi_apachi/poi-3.9/poi-3.9-20121203.jar"/>
-	<classpathentry kind="lib" path="D:/university/sem_5/SystemControlConfirentions/poi_apachi/poi-3.9/poi-examples-3.9-20121203.jar"/>
-	<classpathentry kind="lib" path="D:/university/sem_5/SystemControlConfirentions/poi_apachi/poi-3.9/poi-excelant-3.9-20121203.jar"/>
-	<classpathentry kind="lib" path="D:/university/sem_5/SystemControlConfirentions/poi_apachi/poi-3.9/poi-ooxml-3.9-20121203.jar"/>
-	<classpathentry kind="lib" path="D:/university/sem_5/SystemControlConfirentions/poi_apachi/poi-3.9/poi-ooxml-schemas-3.9-20121203.jar"/>
-	<classpathentry kind="lib" path="D:/university/sem_5/SystemControlConfirentions/poi_apachi/poi-3.9/poi-scratchpad-3.9-20121203.jar"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/net.ostis.confman.service"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/log4j"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/poi"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
