--- a/net.ostis.confman.model/.classpath
+++ b/net.ostis.confman.model/.classpath
@@ -18,5 +18,6 @@
 	<classpathentry kind="lib" path="D:/university/sem_5/SystemControlConfirentions/Git/conforg-desktop/net.ostis.confman.lib/poi/poi-scratchpad-3.9-20121203.jar"/>
 	<classpathentry kind="lib" path="D:/university/sem_5/SystemControlConfirentions/Git/conforg-desktop/net.ostis.confman.lib/poi/stax-api-1.0.1.jar"/>
 	<classpathentry kind="lib" path="D:/university/sem_5/SystemControlConfirentions/Git/conforg-desktop/net.ostis.confman.lib/poi/xmlbeans-2.3.0.jar"/>
+	<classpathentry kind="lib" path="D:/university/sem_5/SystemControlConfirentions/Git/conforg-desktop/net.ostis.confman.lib/swt/swt.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
