--- a/net.ostis.confman.lib/.classpath
+++ b/net.ostis.confman.lib/.classpath
@@ -1,5 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
+	<classpathentry exported="true" kind="lib" path="log4j/log4j-1.2.17.jar"/>
+	<classpathentry exported="true" kind="lib" path="poi/commons-codec-1.5.jar"/>
+	<classpathentry exported="true" kind="lib" path="poi/commons-logging-1.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="poi/dom4j-1.6.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="poi/junit-3.8.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="poi/log4j-1.2.13.jar"/>
+	<classpathentry exported="true" kind="lib" path="poi/poi-3.9-20121203.jar"/>
+	<classpathentry exported="true" kind="lib" path="poi/poi-examples-3.9-20121203.jar"/>
+	<classpathentry exported="true" kind="lib" path="poi/poi-excelant-3.9-20121203.jar"/>
+	<classpathentry exported="true" kind="lib" path="poi/poi-ooxml-3.9-20121203.jar"/>
+	<classpathentry exported="true" kind="lib" path="poi/poi-ooxml-schemas-3.9-20121203.jar"/>
+	<classpathentry exported="true" kind="lib" path="poi/poi-scratchpad-3.9-20121203.jar"/>
+	<classpathentry exported="true" kind="lib" path="poi/stax-api-1.0.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="poi/xmlbeans-2.3.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="swt/swt-debug.jar"/>
+	<classpathentry exported="true" kind="lib" path="swt/swt.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
 	<classpathentry kind="output" path="bin"/>
