--- a/net.ostis.confman.lib/build.properties
+++ b/net.ostis.confman.lib/build.properties
@@ -1,7 +1,23 @@
 bin.includes = META-INF/,\
                log4j/,\
                poi/,\
-               swt/
+               swt/,\
+               log4j/log4j-1.2.17.jar,\
+               poi/commons-codec-1.5.jar,\
+               poi/commons-logging-1.1.jar,\
+               poi/dom4j-1.6.1.jar,\
+               poi/junit-3.8.1.jar,\
+               poi/log4j-1.2.13.jar,\
+               poi/poi-3.9-20121203.jar,\
+               poi/poi-examples-3.9-20121203.jar,\
+               poi/poi-excelant-3.9-20121203.jar,\
+               poi/poi-ooxml-3.9-20121203.jar,\
+               poi/poi-ooxml-schemas-3.9-20121203.jar,\
+               poi/poi-scratchpad-3.9-20121203.jar,\
+               poi/stax-api-1.0.1.jar,\
+               poi/xmlbeans-2.3.0.jar,\
+               swt/swt-debug.jar,\
+               swt/swt.jar
 jars.extra.classpath = log4j/log4j-1.2.17.jar,\
                        poi/commons-codec-1.5.jar,\
                        poi/commons-logging-1.1.jar,\
