--- a/net.ostis.confman.lib/build.properties
+++ b/net.ostis.confman.lib/build.properties
@@ -17,7 +17,10 @@ bin.includes = META-INF/,\
                poi/stax-api-1.0.1.jar,\
                poi/xmlbeans-2.3.0.jar,\
                swt/swt-debug.jar,\
-               swt/swt.jar
+               swt/swt.jar,\
+               jaxb/,\
+               jaxb/jaxb-core.jar,\
+               jaxb/jaxb-impl.jar
 jars.extra.classpath = log4j/log4j-1.2.17.jar,\
                        poi/commons-codec-1.5.jar,\
                        poi/commons-logging-1.1.jar,\
