--- a/net.ostis.confman.test/.classpath
+++ b/net.ostis.confman.test/.classpath
@@ -8,5 +8,6 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/poi"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/net.ostis.confman.services"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/net.ostis.confman.services.common"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
