--- a/net.ostis.confman.ui/.classpath
+++ b/net.ostis.confman.ui/.classpath
@@ -4,5 +4,6 @@
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/net.ostis.confman.services"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/net.ostis.confman.services.common"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
