--- a/net.ostis.confman.lib/.classpath
+++ b/net.ostis.confman.lib/.classpath
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry exported="true" kind="lib" path="jaxb/"/>
-	<classpathentry exported="true" kind="lib" path="jaxb/jaxb-core.jar"/>
-	<classpathentry exported="true" kind="lib" path="jaxb/jaxb-impl.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
 	<classpathentry exported="true" kind="lib" path="log4j/log4j-1.2.17.jar"/>
 	<classpathentry exported="true" kind="lib" path="poi/commons-codec-1.5.jar"/>
 	<classpathentry exported="true" kind="lib" path="poi/commons-logging-1.1.jar"/>
@@ -19,7 +18,8 @@
 	<classpathentry exported="true" kind="lib" path="poi/xmlbeans-2.3.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="swt/swt-debug.jar"/>
 	<classpathentry exported="true" kind="lib" path="swt/swt.jar"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
+	<classpathentry exported="true" kind="lib" path="jaxb" sourcepath="jaxb"/>
+	<classpathentry exported="true" kind="lib" path="jaxb/jaxb-core.jar"/>
+	<classpathentry exported="true" kind="lib" path="jaxb/jaxb-impl.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
