--- a/net.ostis.confman.ui/build.properties
+++ b/net.ostis.confman.ui/build.properties
@@ -4,5 +4,7 @@ bin.includes = META-INF/,\
                plugin.xml,\
                Application.e4xmi,\
                icons/,\
-               css/default.css
+               css/default.css,\
+               resourses/
 source.. = src/
+src.includes = resourses/
