--- a/net.ostis.confman.ui/build.properties
+++ b/net.ostis.confman.ui/build.properties
@@ -5,6 +5,8 @@ bin.includes = META-INF/,\
                Application.e4xmi,\
                icons/,\
                css/default.css,\
-               resourses/
+               resourses/,\
+               OSGI-INF/,\
+               config/
 source.. = src/
 src.includes = resourses/
