--- a/net.ostis.confman.model/.classpath
+++ b/net.ostis.confman.model/.classpath
@@ -7,5 +7,6 @@
 	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.USER_LIBRARY/log4j"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/poi"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/net.ostis.confman.services.common"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/swt"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
