--- a/net.ostis.confman.model/.classpath
+++ b/net.ostis.confman.model/.classpath
@@ -8,5 +8,18 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/poi"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/net.ostis.confman.services.common"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/swt"/>
+	<classpathentry kind="lib" path="/net.ostis.confman.lib/poi/poi-3.9-20121203.jar"/>
+	<classpathentry kind="lib" path="/net.ostis.confman.lib/poi/poi-examples-3.9-20121203.jar"/>
+	<classpathentry kind="lib" path="/net.ostis.confman.lib/poi/poi-excelant-3.9-20121203.jar"/>
+	<classpathentry kind="lib" path="/net.ostis.confman.lib/poi/poi-ooxml-3.9-20121203.jar"/>
+	<classpathentry kind="lib" path="/net.ostis.confman.lib/poi/poi-ooxml-schemas-3.9-20121203.jar"/>
+	<classpathentry kind="lib" path="/net.ostis.confman.lib/poi/poi-scratchpad-3.9-20121203.jar"/>
+	<classpathentry kind="lib" path="/net.ostis.confman.lib/poi/commons-codec-1.5.jar"/>
+	<classpathentry kind="lib" path="/net.ostis.confman.lib/poi/commons-logging-1.1.jar"/>
+	<classpathentry kind="lib" path="/net.ostis.confman.lib/poi/dom4j-1.6.1.jar"/>
+	<classpathentry kind="lib" path="/net.ostis.confman.lib/poi/junit-3.8.1.jar"/>
+	<classpathentry kind="lib" path="/net.ostis.confman.lib/poi/stax-api-1.0.1.jar"/>
+	<classpathentry kind="lib" path="/net.ostis.confman.lib/poi/xmlbeans-2.3.0.jar"/>
+	<classpathentry kind="lib" path="/net.ostis.confman.lib/log4j/log4j-1.2.17.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
