--- a/net.ostis.confman.ui/.classpath
+++ b/net.ostis.confman.ui/.classpath
@@ -5,5 +5,6 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/net.ostis.confman.services"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/net.ostis.confman.services.common"/>
+	<classpathentry kind="lib" path="/net.ostis.confman.lib/log4j/log4j-1.2.17.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
