--- a/net.ostis.confman.ui/.classpath
+++ b/net.ostis.confman.ui/.classpath
@@ -2,9 +2,11 @@
 <classpath>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
+	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.USER_LIBRARY/log4j"/>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/net.ostis.confman.services"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/net.ostis.confman.services.common"/>
-	<classpathentry kind="lib" path="/net.ostis.confman.lib/log4j/log4j-1.2.17.jar"/>
+	<classpathentry exported="true" kind="lib" path="/net.ostis.confman.lib/log4j/log4j-1.2.17.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/poi"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
