--- a/net.ostis.confman.lib/build.properties
+++ b/net.ostis.confman.lib/build.properties
@@ -20,7 +20,10 @@ bin.includes = META-INF/,\
                swt/swt.jar,\
                jaxb/,\
                jaxb/jaxb-core.jar,\
-               jaxb/jaxb-impl.jar
+               jaxb/jaxb-impl.jar,\
+               velocity-1.7/velocity-1.7.jar,\
+               velocity-1.7/commons-collections-3.2.1.jar,\
+               velocity-1.7/commons-lang-2.6.jar
 jars.extra.classpath = log4j/log4j-1.2.17.jar,\
                        poi/commons-codec-1.5.jar,\
                        poi/commons-logging-1.1.jar,\
@@ -35,4 +38,5 @@ jars.extra.classpath = log4j/log4j-1.2.17.jar,\
                        poi/poi-scratchpad-3.9-20121203.jar,\
                        poi/stax-api-1.0.1.jar,\
                        poi/xmlbeans-2.3.0.jar,\
-                       swt/swt.jar
+                       swt/swt.jar,\
+                       velocity-1.7/velocity-1.7.jar
